UI fix for arrow toggle spacing

--- a/geonode/static/geonode/less/base.less
+++ b/geonode/static/geonode/less/base.less
@@ -775,6 +775,13 @@ ul.space li {
 #contain-slider {
   overflow: hidden;
 
+  a.toggle i {
+    display: block;
+    float: left;
+    width: 20px;
+    text-align: center;
+  }
+
   .tab-content {
      margin-left: 40px;
      width: auto;
